// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot - different sizes text emoji and diferent size 1`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f1-border-secondary bg-f1-background dark:bg-f1-background-inverse-secondary w-6 h-6 rounded-sm"
>
  <Text
    className="text-xs"
  >
    test
  </Text>
</View>
`;

exports[`Button Snapshot - different sizes text emoji and diferent size 2`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f1-border-secondary bg-f1-background dark:bg-f1-background-inverse-secondary w-9 h-9 rounded-md"
>
  <Text
    className="text-sm"
  >
    test
  </Text>
</View>
`;

exports[`Button Snapshot - different sizes text emoji and diferent size 3`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f1-border-secondary bg-f1-background dark:bg-f1-background-inverse-secondary w-10 h-10 rounded-lg"
>
  <Text
    className="text-md"
  >
    test
  </Text>
</View>
`;
